[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Calavera.png" type="Texture" id=1]
[ext_resource path="res://Assets/Escenas/CalaveraLanzadora.gd" type="Script" id=2]
[ext_resource path="res://Assets/Escenas/BalaEnemy.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 48.9519

[sub_resource type="CircleShape2D" id=2]
radius = 64.0947

[sub_resource type="CircleShape2D" id=3]
radius = 428.998

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.002, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.45098, 0.105882, 0.105882, 1 ), Color( 1, 1, 1, 1 ), Color( 0.45098, 0.105882, 0.105882, 1 ), Color( 0.258824, 0.0745098, 0.0745098, 1 ), Color( 0.45098, 0.105882, 0.105882, 1 ) ]
}

[node name="CalaveraLanzadora" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 15
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
hit_damage = 5
balaEnemy = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.45098, 0.105882, 0.105882, 1 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Da√±o" = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Disparo" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Disparo" to="." method="_on_Disparo_timeout"]
